--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 #netbeans 版本控制 
-nbproject
+nbproject/
 
 #thinkphp 运行文件
-Runtime
-
+Runtime/
 
 # Windows image file caches
 Thumbs.db
@@ -48,3 +47,4 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
