--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,13 @@
-#netbeans 版本控制 
-nbproject/
-
-#thinkphp 运行文件
+/nbproject/private/
+*.md
 Runtime/
+*.svn-base
+.svn/
+*.tmp
+Runtime/*
+nbproject/*
+nbproject/
+~
+~
 
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-sliderShow.html
+Application/Common/Conf/config.php
